# Bored

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-with-clang.yml
